--- a/MCLand1.21/MCLand/pom.xml
+++ b/MCLand1.21/MCLand/pom.xml
@@ -5,8 +5,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.mutantcat</groupId>
-    <artifactId>mcland110</artifactId>
+    <artifactId>mcland121</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.21.1-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
+
+
+    <repositories>
+        <repository>
+            <id>spigotmc-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
