--- a/MCLand1.21/MCLand/pom.xml
+++ b/MCLand1.21/MCLand/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.mutantcat</groupId>
     <artifactId>mcland121</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
 
     <dependencies>
@@ -39,6 +39,14 @@
     </properties>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
