--- a/MCLand1.21/MCLand/pom.xml
+++ b/MCLand1.21/MCLand/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.mutantcat</groupId>
     <artifactId>mcland121</artifactId>
-    <version>1.0</version>
+    <version>1.21.20250506</version>
 
 
     <dependencies>
